[package]
name = "lignin"
version = "0.0.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A virtual DOM structure, primarily for web use."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin"
homepage = "https://github.com/Tamschi/lignin/tree/v0.0.3"
documentation = "https://docs.rs/lignin/0.0.3"
keywords = ["VDOM", "tree"]
categories = ["data-structures"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin" }
maintenance = { status = "experimental" }

[features]
bumpalo-collections = ["bumpalo/collections"]
debug = ["derivative"]

[dependencies]
bumpalo = "~3.4.0" # public, minor version rustc bumps
derivative = { version = "2.1.1", optional = true }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
