[package]
name = "lignin"
version = "0.0.6"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A virtual DOM structure, primarily for web use."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin"
homepage = "https://github.com/Tamschi/lignin/tree/v0.0.6"
documentation = "https://docs.rs/lignin/0.0.6"
keywords = ["VDOM", "tree", "no_std"]
categories = ["data-structures"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin" }
maintenance = { status = "experimental" }

[features]
callbacks = ["lazy_static", "wasm-bindgen", "web-sys"] # Enables DOM callback support. Requires `std`.

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
wasm-bindgen = { version = "0.2.71", optional = true } # public
web-sys = { version = "0.3.47", optional = true, features = ["Comment", "Element", "Event", "HtmlElement", "SvgElement", "Text"] } # public

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
js-sys = "0.3.49"
static_assertions = "1.1.0"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.23"

[package.metadata.docs.rs]
features = ["callbacks"]
targets = ["x86_64-unknown-linux-gnu"] # The same everywhere.

[package.metadata.playground]
features = ["callbacks"]
