[package]
name = "lignin"
version = "0.1.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A virtual DOM structure, primarily for web use."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin"
homepage = "https://github.com/Tamschi/lignin/tree/v0.1.0"
documentation = "https://docs.rs/lignin/0.1.0"
keywords = ["VDOM", "tree", "no_std"]
categories = ["data-structures"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin" }
maintenance = { status = "experimental" }

[features]
callbacks = ["lazy_static", "wasm-bindgen", "web-sys"] # Enables DOM callback support. Requires `std`.

[dependencies]
lazy_static = { version = "1.4", optional = true }
wasm-bindgen = { version = "0.2.75", optional = true } # public
web-sys = { version = "0.3.47", optional = true, features = ["Comment", "Element", "Event", "HtmlElement", "SvgElement", "Text"] } # public

[dev-dependencies]
bumpalo = "3.6"
cargo-husky = "1.5"
crc32fast = "1.2"
doc-comment = "0.3.3"
git_info = "0.1.2"
intaglio = "1.2"
js-sys = "0.3.49"
static_assertions = "1.1"
version-sync = "0.9.1"
wasm-bindgen = "0.2.75"
wasm-bindgen-test = "0.3.25"

[package.metadata.docs.rs]
features = ["callbacks"]
targets = ["x86_64-unknown-linux-gnu"] # The same everywhere.

[package.metadata.playground]
features = ["callbacks"]
